[tool.poetry]
name = "codac-replit"
version = "1.2.1"
description = "A simple way to use Codac with Python online."
authors = ["Simon Rohou <simon.rohou@ensta-bretagne.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
codac = "^1.2.1"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"